--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": {"Opis\\Utils\\": "lib/"}
+        "psr-4": {
+            "Opis\\Utils\\": "lib/"
+        }
     }
 }
