--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,38 @@
 {
     "name": "opis/utils",
-    "description": "A collection of useful classes that deals with UTF-8 strings, URLs, punycode, form validation and more",
-    "keywords": ["utf8", "utf8 string", "url", "punycode", "validator", "form validation"],
+    "description": "A collection of useful classes",
+    "keywords": ["regex builder", "version validation", "mutex"],
     "homepage": "http://opis.io",
     "license": "Apache-2.0",
     "authors": [
         {
             "name": "Marius Sarca",
             "email": "marius.sarca@gmail.com"
+        },
+        {
+            "name": "Sorin Sarca",
+            "email": "sarca_sorin@hotmail.com"
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": "^7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "^7"
     },
     "autoload": {
         "psr-4": {
-            "Opis\\Utils\\": "lib/"
+            "Opis\\Utils\\": "src/"
+        }
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2020.x-dev"
         }
     }
 }
