--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "opis/string": "2020.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
